@@ -1,3 +1,12 @@
+2003-11-03  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3472030, line-height not properly reset in all cases when the font shorthand is used.
+	
+        Reviewed by mjs
+
+        * khtml/css/cssparser.cpp:
+        (CSSParser::parseFont):
+
 2003-11-03  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
